--- a/portfolio_2021/src/Views/Home/Contact/Contact.css
+++ b/portfolio_2021/src/Views/Home/Contact/Contact.css
@@ -14,7 +14,7 @@
 .spacer-contact {
 	background-color: transparent;
 	width: 100%;
-	height: 8rem;
+	height: 10rem;
 }
 
 .contact-title h1 {
@@ -32,4 +32,20 @@
 }
 
 .form {
+}
+
+@media screen and (min-width: 1670px) {
+	.contact-main-container {
+		height: 100vh;
+	}
+}
+
+@media screen and (min-width: 1921px) {
+	.contact-main-container {
+		height: 100vh;
+	}
+
+	.spacer-contact {
+		height: 15rem;
+	}
 }
