--- a/portfolio_2021/src/Views/Home/Intro/Intro.css
+++ b/portfolio_2021/src/Views/Home/Intro/Intro.css
@@ -15,7 +15,7 @@
 	animation-name: fadeInOpacity;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
-	animation-duration: 1s;
+	animation-duration: 0.5s;
 	/* 
 	-webkit-animation: fadeInOpacity ease 0.5s;
 	-moz-animation: fadeInOpacity ease 0.5s;
